# agenticemail-python

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  api.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agenticemail/: __init__.py  langchain.py
examples/: auto_reply.py
tests/: test_langchain.py
