[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticemail"
version = "0.1.2"
description = "Python SDK for AgenticEmail — API-first email for AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://agenticemail.dev"
Repository = "https://github.com/AgenticEmail/agenticemail-python"
Documentation = "https://agenticemail.dev/docs"

[project.optional-dependencies]
events = ["websocket-client>=1.6"]
langchain = ["langchain-core>=0.3"]

[tool.hatch.build.targets.wheel]
packages = ["agenticemail"]
